--- a/templates/user.html
+++ b/templates/user.html
@@ -9,7 +9,7 @@
 <body>
     <div class="sidebar">
         <a href="/">Dashboard</a>
-        <a href="/addIssue">Add Issue</a>
+        <a href="/add_issue">Add Issue</a>
         <a href="/">Settings</a>
         <a href="/logout">Logout</a>
     </div>
