--- a/templates/add_issue.html
+++ b/templates/add_issue.html
@@ -10,7 +10,7 @@
 <body>
     <div class="sidebar">
         <a href="/">Dashboard</a>
-        <a href="/addIssue">Add Issue</a>
+        <a href="/add_issue">Add Issue</a>
         <a href="/">Settings</a>
         <a href="/logout">Logout</a>
     </div>
