--- a/templates/login.html
+++ b/templates/login.html
@@ -18,6 +18,8 @@
           {% if error_message %}
             <p class="error-message">{{ error_message }}</p>
             {% endif %} 
+            <br>
+            <a class="register" href="{{ url_for('register') }}">Click here to register</a> 
         </form>
     </div>
 </body>
