--- a/static/css/add_issue.css
+++ b/static/css/add_issue.css
@@ -91,7 +91,8 @@ form {
     background-color: #f5f5f5;
     border: 1px solid #ccc;
     border-radius: 4px;
-    padding: 20px;
+    width: 500px;
+    left: 30%;
 }
 
 label {
