--- a/templates/add_issue.html
+++ b/templates/add_issue.html
@@ -15,7 +15,7 @@
         <a href="/logout">Logout</a>
     </div>
     <h1>Add Issue</h1>
-    <form action="/add_issue" method="post">
+    <form action="/add_issue" method="post" >
         <label for="name">Name:</label>
         <input type="text" id="name" name="name" required><br>
 
@@ -34,5 +34,10 @@
 
         <button type="submit">Add Issue</button>
     </form>
+    
 </body>
+<script>
+
+        
+</script>
 </html>
