--- a/templates/supporter.html
+++ b/templates/supporter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/user.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/supporter.css') }}">
 </head>
 <body>
     <div class="sidebar">
@@ -45,6 +45,9 @@
                   <div class="status">
                     <span>STATUS</span>
                   </div>
+                  <div class="edit">
+                    <span></span>
+                  </div>
                 </div>
               </li>
             </ul>
@@ -63,14 +66,14 @@
                         <div class="issue">
                             <span>{{ issue['issue_description'] }}</span>
                         </div>
-                        <div class="user">
+                        <div class="username">
                           <span class="{{ issue['user'].lower() }}">{{ issue['user'] }}</span>
                       </div>
                         <div class="status">
                             <span class="{{ issue['status'].lower() }}">{{ issue['status'] }}</span>
                         </div>
-                      <div>
-                        <a href="update_issue/{{ issue.id }}" class="btn btn-success">Change Status</a>
+                      <div class="edit">
+                        <a href="update_issue/{{ issue.id }}" class="btn-success">Change Status</a>
                       </div> 
                     </div>
                 </li>
